# axon-desktop

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: docker-compose.yml
src-tauri/src/: lib.rs
src-tauri/src/commands/: api.rs  docker.rs  mod.rs
src/components/: StatsBar.tsx  StatusBadge.tsx
src/hooks/: useAxonStatus.ts  useContainerStats.ts  useDockerStatus.ts
src/pages/: Dashboard.tsx  SetupWizard.tsx
src/pages/wizard/: Disclaimer.tsx  DockerCheck.tsx  LlmSetup.tsx  PersonaSetup.tsx  Starting.tsx  TelegramSetup.tsx
