[package]
name = "axon"
version = "0.1.0"
description = "Axon Desktop — secure AI agent orchestration"
authors = ["Marcel Gast"]
edition = "2021"

[lib]
name = "axon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
